[gd_scene load_steps=2 format=2]

[ext_resource path="res://many_dice.gd" type="Script" id=1]

[node name="ManyDice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Calculate" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Calculate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dice" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 926.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.0
placeholder_text = "eg. 4d6d1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 930.0
margin_right = 1023.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 93.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
text = "Explode Depth"
align = 1
valign = 1

[node name="ExplodeDepth" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 10.0
value = 3.0

[node name="Output" type="Panel" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Bars" type="ScrollContainer" parent="VBoxContainer/Output"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarContainer" type="VBoxContainer" parent="VBoxContainer/Output/Bars"]
margin_right = 1016.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Calculate" to="." method="_on_Calculate_pressed"]
